# teXpert

./: README.md  good_docx.docx  invalid_docx.docx  pyproject.toml  requirements.md  test_file.tex
latex_test/: test_2.tex
src/: main.py  reporter.py
src/validator/: result.py  util.py
src/validator/docx/: content_checker.py  format_checker.py  page_numbering_checker.py  start_checks.py  vkr_word.py
src/validator/pdf/: headings_checker.py  open_doc.py  validate_font.py  validate_headers.py  validate_inpage_style.py
src/validator/pdf/tests/: test_pdf_validators.py
src/validator/tex/: parser.py  traverse_nodes.py  treverse_nodes.py  validate_font_style.py  validate_geometry.py  validate_text.py
src/validator/tex/tests/: mock.py  test_validate_font_style.py  test_validate_geometry.py
